--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
@@ -76,8 +76,8 @@
                         }
                     <!--右側區塊-->
                     <button class="btn btn-danger" onclick="setAdminValue()">管理員demo</button>
-                    <button class="btn btn-dark" onclick="setErrorValue()">驗證demo1</button>
-                    <button class="btn btn-dark" onclick="setEmptyValue()">驗證demo2</button>
+@*                    <button class="btn btn-dark" onclick="setErrorValue()">驗證demo1</button>
+                    <button class="btn btn-dark" onclick="setEmptyValue()">驗證demo2</button>*@
                 </div>
             </div>
         </div>
