--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -483,7 +483,7 @@
             var file = fileInput.files[0];
 
             //驗證非空值
-            if (!ProductName || !ProductDescription || !ProductPrice) {
+            if (!ProductName || !ProductDescription || !ProductPrice || !ProductCategoryId) {
                 showErrorMessage("錯誤", "名稱、類別、價格為必填欄位，請再次檢查。");
                 return;
             }
@@ -584,7 +584,7 @@
             var file = fileInput.files[0];
 
             //驗證非空值
-            if (!ProductName || !ProductDescription || !ProductPrice||!file) {
+            if (!ProductName || !ProductDescription || !ProductPrice || !file || !ProductCategoryId) {
                 showErrorMessage("錯誤", "名稱、類別、價格、圖片為必填欄位，請再次檢查。");
                 return;
             }
