--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -45,6 +45,11 @@
             width: 100%;
         }
 
+        .form-check-input[type="checkbox"]:checked {
+            background-color: #b95756;
+            border-color: #fff;
+        }
+
 </style>
 }
 
@@ -119,9 +124,9 @@
                                         <img id="preview-createimage" src="" class="w-100 border">
                                     </div>
                                 </div>
-                        <button type="button" class="mt-3 btn btn-danger" onclick="setCreateBannerValue()">Demo</button>
-                        <button type="submit" class="mt-3 btn btn-danger btn-block" name="submitButton" id="submitButton"
-                                style="width: 100%;">
+                        <button type="button" class="mt-3 btn " onclick="setCreateBannerValue()" style="background-color: #b95756;color: #FFF;">Demo</button>
+                        <button type="submit" class="mt-3 btn  btn-block" name="submitButton" id="submitButton"
+                        style="width: 100%; background-color: #b95756;color: #FFF;">
                             儲存
                         </button>
                         </div>
@@ -207,7 +212,9 @@
                                             </div>
                                         </div>
                                     <button type="submit" class="mt-3 btn btn-danger btn-block" name="submitButton-edior" id="submitButton-edior"
-                                                    style="width: 100%;">儲存</button>
+                                            style="width: 100%;background-color: #b95756;color: #FFF;">
+                                        儲存
+                                    </button>
                                     </div>
                                     <!--內容表單-->
                                 </div>
