※修正選擇付款方式的bug

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -882,12 +882,12 @@
                 <nav class="customer_info">
                     <div class="nav nav-tabs" id="nav-paymentMethod-tab" role="tablist">
                         <input class="nav-link active" id="nav-credit-tab" type="radio" name="paymentMethod"
-                               data-bs-toggle="tab" data-bs-target="#nav-credit" role="tab" aria-controls="nav-credit"
+                               data-bs-toggle="tab" data-bs-target="#credit" role="tab" aria-controls="nav-credit"
                                aria-selected="true" value="信用卡付款" checked>
                         <label for="nav-credit-tab" class="mb-0">信用卡付款</label>
 
                         <input class="nav-link" id="nav-ATM-tab" type="radio" name="paymentMethod"
-                               data-bs-toggle="tab" data-bs-target="#nav-ATM" role="tab" aria-controls="nav-ATM"
+                               data-bs-toggle="tab" data-bs-target="#ATM" role="tab" aria-controls="nav-ATM"
                                aria-selected="false" value="銀行轉帳">
                         <label for="nav-ATM-tab" class="mb-0">銀行轉帳</label>
 
@@ -900,12 +900,12 @@
                 <!--三種付款方式的分頁-->
                 <div class="tab-content invoice-size" id="nav-invoice-tabContent">
                     <!--信用卡付款分頁內容-->
-                    <div class="tab-pane fade show active" id="nav-credit" role="tabpanel"
+                    <div class="tab-pane fade show active" id="credit" role="tabpanel"
                          aria-labelledby="nav-credit-tab">
                         <label class="nav-ATM-css">選擇此方式會在送出訂單後進到綠界科技付款頁面進行付款。</label>
                     </div>
                     <!--銀行轉帳分頁內容-->
-                    <div class="tab-pane fade" id="nav-ATM" role="tabpanel" aria-labelledby="nav-ATM-tab">
+                    <div class="tab-pane fade" id="ATM" role="tabpanel" aria-labelledby="nav-ATM-tab">
                         <label class="nav-ATM-css">選擇此方式會在送出訂單後會得到一組僅供本次交易使用的轉帳帳號，請在期限內匯款完畢，否則此筆交易將取消。</label>
                         <ul class="nav-ATM-fontSize">
                             <li>以下為範例：</li>
