--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -41,6 +41,7 @@
             height: 40px;
         }
 
+
     </style>
 }
 
@@ -347,7 +348,7 @@
                     "render": function (data, type, row) {
                         var deleteUrl = '@Url.Action("Delete", "Bonus", new { area = "AdminCMS", id = "couponId" })';
                         deleteUrl = deleteUrl.replace('couponId', row.couponId);
-                        return `<button  class="edit-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#EditModalToggle"><i class="fas fa-edit"></i></button> |
+                        return `<button  class="btn btn-icon edit-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#EditModalToggle"><i class="fas fa-edit"></i></button> |
                                                                                                                                 <button class="btn delete-button" data-id="${row.couponId}" ><i class="fas fa-trash-alt"></i></button>`
                     }
                 }
